--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost/bptrk_kt_spring
+spring.datasource.username=dev
+spring.datasource.password=dev
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
