--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost/bptrk_kt_spring
-spring.datasource.username=dev
-spring.datasource.password=dev
+spring.datasource.username=bptrk_dev
+spring.datasource.password=bptrk_dev
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
